--- a/.gitignore
+++ b/.gitignore
@@ -1,60 +1,12 @@
-## Eclipse
-.settings/
-bin/
-tmp/
-.metadata
-.classpath
-.project
-*.tmp
-*.bak
-*.swp
-*~.nib
-local.properties
-.loadpath
-.factorypath
+# Ignore Gradle project-specific cache directory
+.gradle
 
-## IntelliJ
-out/
-.idea/
-.idea_modules/
-*.iml
-*.ipr
-*.iws
+# Ignore Gradle build output directory
+build
 
-## Java
-.mtj.tmp/
-*.class
-*.jar
-*.war
-*.ear
-*.nar
-hs_err_pid*
+.server
 
-## Maven
-target/
-pom.xml.tag
-pom.xml.releaseBackup
-pom.xml.versionsBackup
-pom.xml.next
-pom.xml.bak
-release.properties
-dependency-reduced-pom.xml
-buildNumber.properties
-.mvn/timing.properties
-.mvn/wrapper/maven-wrapper.jar
+bin
 
-## NetBeans
-nbproject/private/
-build/
-nbbuild/
-dist/
-nbdist/
-nbactions.xml
-nb-configuration.xml
-
-## OS X
-.DS_Store
-
-## VS Code
-.vscode/
-.code-workspace
+test.db
+*.db
